--- a/themes/icore-open/fundamentals/spacing.scss
+++ b/themes/icore-open/fundamentals/spacing.scss
@@ -25,16 +25,8 @@
   gap: var(--spacing-0);
 }
 
-.spacing-125 {
-  gap: var(--spacing-125);
-}
-
 .spacing-020 {
   gap: var(--spacing-020);
-}
-
-.spacing-375 {
-  gap: var(--spacing-375);
 }
 
 .spacing-050 {
